# robotframework-browser-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: datadriver.csv  insurant.yaml  price.yaml  product.yaml  quote.yaml  vehicles.yaml
resources/: common.resource  insurant_page.resource  price_page.resource  product_page.resource  quote_page.resource  utils.py  vehicle_page.resource
tests/: datadriver.robot  e2e.robot
