[tool.poetry]
name = "robotframework-browser-demo"
version = "0.1.0"
description = ""
authors = ["Michal Mirowski"]
readme = "README.md"
packages = [{include = "robotframework_browser_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^6.0.2"
robotframework-browser = "^16.0.2"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
